--- a/src/main/resources/assets/northfall/lang/en_us.json
+++ b/src/main/resources/assets/northfall/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "itemGroup.northfall.northfall_itemgroup": "Northfall"
+  "itemGroup.northfall.northfall_itemgroup": "Northfall",
+  "nightblade_class": "Nightblade"
 }
